--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     image: mysql:9.2
     hostname: mysql
     environment:
-      MYSQL_DATABASE: ${MYSQL_DATABASE:-user}
+      MYSQL_DATABASE: ${MYSQL_DATABASE:-data}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD:-randompassword}
       MYSQL_USER: ${MYSQL_USER:-mysql_user}
       MYSQL_PASSWORD: ${MYSQL_USER:-anotherrandompassword}
